# oak

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  b  cache  global  proof  readme.md
benchmark/: a.cc  b.cc
cheats/: convert.ts  data.h  gen1-teams.ts  output.txt  prng.ts  randbat.h  random-set-data.h
dev/: bug  c  cf  convert.py  d  f  format.py  gen  libpkmn  r  remake
include/: actor-pool.h  actor-pool.hh  alpha-beta-refactor.h  analysis.h  analysis.hh  battle.h  battle.hh  battle.md  chance.h  clamp.hh  cli.h  client.h  data.h  debug-log.h  debug-log.hh  eval-log.h  eval-log.hh  eval.h  exp3.h  hash.h  ii-search.h  ii.search.h  mc-average.h  mc-average.hh  old-battle.h  old-battle.hh  pi-search.h  prob-test.h  prob-test.hh  readme.md  sides.h  sides.hh  tests.h  tree.h  tt.h  ucb.h  util.h
include/battle/: battle.h  chance.h  debug-log.h  helper.h  init.h  sample-teams.h  strings.h  tests.h  util.h  view.h
include/battle/data/: convert.py  data.h  moves.h  offsets.h  sample-teams.h  species.h
include/data/: durations.h  legal-moves.h  moves.h  offsets.h  options.h  sample-teams.h  species.h  status.h  strings.h  types.h
include/ii/: client.h
include/ii/random-battles/: convert.ts  data.h  randbat.h  random-set-data.h
include/nnue/: a.cc  accumulator.h  affine_transform.h  clipped_relu.h  encoding.h  main.py  moves.py  nnue_architecture.h  nnue_common.h  preprocessor.h  simd.h  slow.h
include/pi/: .mcts.h.swp  abstract.h  eval.h  exp3-quant.h  exp3.h  frame.h  hash.h  mcts-model.h  mcts.h  ovo-eval.h  pgame.h  poke-engine.h  tree.h  tt.h  ucb.h
include/util/: fs.h  print.h  random.h  vector.h
lab/: games.cc  games.h  lab.h  log.cc  log.h  main.cc  process.h  sides.cc  sides.h  threads.h
logs/: README.md  clean.sh  convert.sh
process/: games.cc  games.h  log.h  main.cc  process.h  sides.cc  sides.h
py/: frame.py  net.py  reader.py  train.py
src/: .mcts.cc.swp  ab-mpq.cc  ab-self-play.cc  ab-test.cc  ab-vs-mcts.cc  ab-vs-mcts.ts  actor-pool-test.cc  benchmark-eval.cc  benchmark.cc  bull-pinyon.cc  bull.cc  check-buffer.cc  cli.cc  client-test.ts  client.ts  convert.cu  debug-log.cc  demo.cc  eval-log.cc  eval.cc  format.py  four.cc  frame.py  generate.cc  io.cc  main.cc  matrix-ucb-tune.cc  mcts-self-play.cc  mcts.cc  mp.py  mpq-alpha-beta.cc  net.py  nn-vs-mcts.cc  nnue.cc  parse-self-play.cc  poo.cpp  quant-exp3.cc  randbat.cc  replay.js  replay.ts  (+9 more)
temp/: bl
test/: README.md  prob-test.cc
ts/: client.ts  legal-moves.ts
weights/: acc  acc.pt  accd  b0  b1  b1d  nn.pt  w0  w1  w1d  w2  w2d
weights/test/: a.pt  acc.pt  accd  b0  b1  b2  datagen.out  nn.pt  p.pt  w0  w1  w2
weights/test-32/: train2.out
weights/test-32/0/: nn.pt  p.pt
weights/test-32/1000/: nn.pt  p.pt
weights/test-32/10000/: nn.pt  p.pt
weights/test-32/100000/: nn.pt  p.pt
weights/test-32/100500/: nn.pt  p.pt
weights/test-32/101000/: nn.pt  p.pt
weights/test-32/101500/: nn.pt  p.pt
weights/test-32/102000/: nn.pt  p.pt
weights/test-32/102500/: nn.pt  p.pt
weights/test-32/103000/: nn.pt  p.pt
weights/test-32/103500/: nn.pt  p.pt
weights/test-32/104000/: nn.pt  p.pt
weights/test-32/104500/: nn.pt  p.pt
weights/test-32/10500/: nn.pt  p.pt
weights/test-32/105000/: nn.pt  p.pt
weights/test-32/105500/: nn.pt  p.pt
weights/test-32/106000/: nn.pt  p.pt
weights/test-32/106500/: nn.pt  p.pt
weights/test-32/107000/: nn.pt  p.pt
weights/test-32/107500/: nn.pt  p.pt
weights/test-32/108000/: nn.pt  p.pt
weights/test-32/108500/: nn.pt  p.pt
weights/test-32/109000/: nn.pt  p.pt
weights/test-32/109500/: nn.pt  p.pt
weights/test-32/11000/: nn.pt  p.pt
weights/test-32/110000/: nn.pt  p.pt
weights/test-32/110500/: nn.pt  p.pt
weights/test-32/111000/: nn.pt  p.pt
weights/test-32/111500/: nn.pt  p.pt
weights/test-32/112000/: nn.pt  p.pt
weights/test-32/112500/: nn.pt  p.pt
weights/test-32/113000/: nn.pt  p.pt
weights/test-32/113500/: nn.pt  p.pt
weights/test-32/114000/: nn.pt  p.pt
weights/test-32/114500/: nn.pt  p.pt
weights/test-32/11500/: nn.pt  p.pt
weights/test-32/115000/: nn.pt  p.pt
weights/test-32/115500/: nn.pt  p.pt
weights/test-32/116000/: nn.pt  p.pt
weights/test-32/116500/: nn.pt  p.pt
weights/test-32/117000/: nn.pt  p.pt
weights/test-32/117500/: nn.pt  p.pt
weights/test-32/118000/: nn.pt  p.pt
weights/test-32/118500/: nn.pt  p.pt
weights/test-32/119000/: nn.pt  p.pt
weights/test-32/119500/: nn.pt  p.pt
weights/test-32/12000/: nn.pt  p.pt
weights/test-32/120000/: nn.pt  p.pt
weights/test-32/120500/: nn.pt  p.pt
weights/test-32/121000/: nn.pt  p.pt
weights/test-32/121500/: nn.pt  p.pt
weights/test-32/122000/: nn.pt  p.pt
weights/test-32/122500/: nn.pt  p.pt
weights/test-32/123000/: nn.pt  p.pt
weights/test-32/123500/: nn.pt  p.pt
weights/test-32/124000/: nn.pt  p.pt
weights/test-32/124500/: nn.pt  p.pt
weights/test-32/12500/: nn.pt  p.pt
weights/test-32/125000/: nn.pt  p.pt
weights/test-32/125500/: nn.pt  p.pt
weights/test-32/126000/: nn.pt  p.pt
weights/test-32/126500/: nn.pt  p.pt
weights/test-32/127000/: nn.pt  p.pt
weights/test-32/127500/: nn.pt  p.pt
weights/test-32/128000/: nn.pt  p.pt
weights/test-32/128500/: nn.pt  p.pt
weights/test-32/129000/: nn.pt  p.pt
weights/test-32/129500/: nn.pt  p.pt
weights/test-32/13000/: nn.pt  p.pt
weights/test-32/130000/: nn.pt  p.pt
weights/test-32/13500/: nn.pt  p.pt
weights/test-32/14000/: nn.pt  p.pt
weights/test-32/14500/: nn.pt  p.pt
weights/test-32/1500/: nn.pt  p.pt
weights/test-32/15000/: nn.pt  p.pt
weights/test-32/15500/: nn.pt  p.pt
weights/test-32/16000/: nn.pt  p.pt
weights/test-32/16500/: nn.pt  p.pt
weights/test-32/17000/: nn.pt  p.pt
weights/test-32/17500/: nn.pt  p.pt
weights/test-32/18000/: nn.pt  p.pt
weights/test-32/18500/: nn.pt  p.pt
weights/test-32/19000/: nn.pt  p.pt
weights/test-32/19500/: nn.pt  p.pt
weights/test-32/2000/: nn.pt  p.pt
weights/test-32/20000/: nn.pt  p.pt
weights/test-32/20500/: nn.pt  p.pt
weights/test-32/21000/: nn.pt  p.pt
(+460 files in other folders)
